Changed repo name

--- a/template.ipynb
+++ b/template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8fb0457b-8604-41b7-ba63-efd7970c6bcb",
    "metadata": {},
    "outputs": [],
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "001426ea-ab0a-48fd-aa7f-fe63e41b02d2",
+   "execution_count": 2,
+   "id": "88519ef7-38f0-4a01-9e31-34665199cd80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,8 @@
     "\n",
     "chrome_exe = \"/usr/bin/google-chrome\"\n",
     "user_data = \"/home/ubuntu/.config/google-chrome/\"\n",
-    "downloads_path = \"/home/ubuntu/Downloads\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52025cd7-a94a-453d-85c7-271755030503",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "downloads_path = \"/home/ubuntu/Downloads\"\n",
+    "\n",
     "async with async_playwright() as p:\n",
     "    playwright = await async_playwright().start()\n",
     "    browser = await playwright.chromium.launch_persistent_context(\n",
